--- a/app/wallet.html
+++ b/app/wallet.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../assets/css/dashboard.css">
 </head>
 
-<body onload="protect();">
+<body>
 
     <div class="dashboard">
         <aside class="sidebar">
@@ -22,7 +22,7 @@
                 <a href="./account.html">Account Settings</a>
             </nav>
             <div class="hr"></div>
-            <button class="btn" type="button" onclick="Session.clear()">Logout</button>
+            <button class="btn" type="button" data-action="logout">Logout</button>
         </aside>
 
         <main class="main">
