--- a/forgot-password.html
+++ b/forgot-password.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Forgot Password — VeriSure</title>
 
     <link rel="stylesheet" href="assets/css/base.css">
@@ -13,116 +13,45 @@
 </head>
 
 <body class="auth">
-
     <header class="navbar">
         <span>VeriSure</span>
         <nav class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="login.html">Login</a>
-            <a href="signup.html" class="nav-cta">Get Started</a>
+            <a href="login.html">Back to login</a>
         </nav>
     </header>
 
     <main class="auth-split-container">
-        <div class="auth-split-card">
-
-            <div class="auth-panel auth-panel-left">
+        <section class="auth-split-card">
+            <aside class="auth-panel-left">
                 <div class="auth-left-content">
-                    <h2>Password recovery</h2>
-                    <p>
-                        Enter the email associated with your VeriSure account.
-                        We’ll send you a secure link to reset your password.
-                    </p>
+                    <h2>Reset your password</h2>
+                    <p>Enter your account email and we’ll guide you to set a new password.</p>
+                    <div class="auth-visual-placeholder">Credential recovery flow</div>
                 </div>
+                <div class="landing-footer">© VeriSure</div>
+            </aside>
 
-                <div class="auth-visual-placeholder">
-                    <img src="assets/illustrations/login.svg" alt="Account recovery"
-                        style="max-width: 100%; max-height: 100%;" />
-                </div>
-            </div>
-
-            <div class="auth-panel auth-panel-right">
-                <h2>Reset your password</h2>
-
+            <section class="auth-panel-right">
+                <h2>Forgot password</h2>
                 <div id="banner"></div>
 
-                <form id="forgotForm" autocomplete="on" novalidate>
-                    <label for="email">
-                        Email address <span class="required-hint">Required</span>
-                    </label>
-                    <input id="email" type="email" required autocomplete="email">
+                <label for="fpEmail">Email</label>
+                <input id="fpEmail" type="email" placeholder="you@example.com" />
 
-                    <button type="button" class="btn-primary auth-btn" id="resetBtn" disabled>
-                        Send reset link
-                    </button>
+                <button id="fpBtn" class="btn-primary auth-btn" type="button">Continue</button>
 
-                    <p class="auth-switch">
-                        Remembered your password? <a href="login.html">Log in</a>
-                    </p>
-                </form>
-            </div>
-
-        </div>
+                <div class="auth-footnote">You’ll be redirected to a secure reset page.</div>
+            </section>
+        </section>
     </main>
 
-    <footer class="landing-footer">
-        VeriSure enforces issuer sovereignty and cryptographic trust.
-    </footer>
-
-    <script src="js/app.js"></script>
-    <script src="js/auth.js"></script>
-
     <script>
-        const email = document.getElementById("email");
-        const btn = document.getElementById("resetBtn");
-        const forgotForm = document.getElementById("forgotForm");
-
-        function validate() {
-            btn.disabled = !email.value.trim();
-        }
-
-        email.addEventListener("input", validate);
-
-        btn.addEventListener("click", async () => {
-            const addr = email.value.trim().toLowerCase();
-            if (!addr) return;
-
-            btn.disabled = true;
-            const originalText = btn.textContent;
-            btn.textContent = "Sending…";
-
-            try {
-                const res = await fetch(API_URL, {
-                    method: "POST",
-                    body: new URLSearchParams({
-                        action: "password_reset_request",
-                        email: addr
-                    })
-                });
-
-                const text = await res.text();
-                let data;
-                try { data = JSON.parse(text); } catch { data = { error: true, message: text }; }
-
-                if (data && data.error) {
-                    showBanner("error", data.error || data.message || "Request failed.");
-                    btn.disabled = false;
-                    btn.textContent = originalText;
-                    return;
-                }
-
-                showBanner("success", "If an account exists for this email, a reset link has been sent.");
-                btn.textContent = originalText;
-            } catch (e) {
-                showBanner("error", "Network error. Please try again.");
-                btn.disabled = false;
-                btn.textContent = originalText;
-            }
+        document.getElementById("fpBtn").addEventListener("click", () => {
+            const email = (document.getElementById("fpEmail").value || "").trim();
+            if (!email) return alert("Please enter your email.");
+            location.href = `reset-password.html?email=${encodeURIComponent(email)}`;
         });
-
-        if (forgotForm) forgotForm.addEventListener("submit", (e) => e.preventDefault());
     </script>
-
 </body>
 
 </html>
