--- a/reset-password.html
+++ b/reset-password.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Set New Password — VeriSure</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Reset Password — VeriSure</title>
 
     <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/layout.css">
@@ -17,124 +17,66 @@
     <header class="navbar">
         <span>VeriSure</span>
         <nav class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="login.html">Login</a>
-            <a href="signup.html" class="nav-cta">Get Started</a>
+            <a href="login.html">Back to login</a>
         </nav>
     </header>
 
     <main class="auth-split-container">
-        <div class="auth-split-card">
-
-            <div class="auth-panel auth-panel-left">
+        <section class="auth-split-card">
+            <aside class="auth-panel-left">
                 <div class="auth-left-content">
-                    <h2>Set a new password</h2>
-                    <p>Choose a strong password you haven’t used before.</p>
+                    <h2>Choose a new password</h2>
+                    <p>Use at least 8 characters and avoid reusing old passwords.</p>
+                    <div class="auth-visual-placeholder">Secure account update</div>
                 </div>
-                <div class="auth-visual-placeholder">
-                    <span>Secure reset</span>
+                <div class="landing-footer">© VeriSure</div>
+            </aside>
+
+            <section class="auth-panel-right">
+                <h2>Reset password</h2>
+
+                <div id="resetError" class="reset-error hidden"></div>
+                <div id="resetSuccess" class="reset-success hidden"></div>
+
+                <div class="reset-password-fields">
+                    <label for="newPassword">New password</label>
+                    <input id="newPassword" type="password" minlength="8" />
+
+                    <label for="confirmPassword">Confirm new password</label>
+                    <input id="confirmPassword" type="password" minlength="8" />
                 </div>
-            </div>
 
-            <div class="auth-panel auth-panel-right">
-                <h2>Create new password</h2>
-
-                <div id="banner"></div>
-
-                <form id="resetForm" autocomplete="on" novalidate>
-                    <label for="password">Password <span class="required-hint">Required</span></label>
-                    <input id="password" type="password" minlength="8" required autocomplete="new-password">
-
-                    <label for="confirm">Confirm password <span class="required-hint">Required</span></label>
-                    <input id="confirm" type="password" minlength="8" required autocomplete="new-password">
-
-                    <button type="button" class="btn-primary auth-btn" id="submitBtn" disabled>
-                        Reset password
-                    </button>
-
-                    <p class="auth-switch" style="margin-top: 14px;">
-                        Back to <a href="login.html">Log in</a>
-                    </p>
-                </form>
-            </div>
-
-        </div>
+                <button id="resetBtn" class="btn-primary auth-btn" type="button">Update password</button>
+            </section>
+        </section>
     </main>
 
-    <footer class="landing-footer">
-        VeriSure enforces issuer sovereignty and cryptographic trust.
-    </footer>
-
-    <script src="js/app.js"></script>
-
     <script>
-        const params = new URLSearchParams(window.location.search);
-        const token = params.get("token");
-        const role = (params.get("role") || "").trim().toLowerCase();
-
-        const password = document.getElementById("password");
-        const confirm = document.getElementById("confirm");
-        const btn = document.getElementById("submitBtn");
-        const resetForm = document.getElementById("resetForm");
-
-        function validate() {
-            const ok =
-                password.value &&
-                confirm.value &&
-                password.value.length >= 8 &&
-                password.value === confirm.value;
-
-            btn.disabled = !ok;
+        function show(el, msg) {
+            el.textContent = msg;
+            el.classList.remove("hidden");
         }
 
-        password.addEventListener("input", validate);
-        confirm.addEventListener("input", validate);
+        function hide(el) {
+            el.textContent = "";
+            el.classList.add("hidden");
+        }
 
-        btn.addEventListener("click", async () => {
-            if (!token) {
-                showBanner("error", "Reset link is invalid or missing a token.");
-                return;
-            }
+        document.getElementById("resetBtn").addEventListener("click", () => {
+            const p1 = document.getElementById("newPassword").value || "";
+            const p2 = document.getElementById("confirmPassword").value || "";
+            const err = document.getElementById("resetError");
+            const ok = document.getElementById("resetSuccess");
 
-            if (!role) {
-                showBanner("error", "Reset link is invalid or missing the account role.");
-                return;
-            }
+            hide(err); hide(ok);
 
-            btn.disabled = true;
+            if (p1.length < 8) return show(err, "Password must be at least 8 characters.");
+            if (p1 !== p2) return show(err, "Passwords do not match.");
 
-            try {
-                const res = await fetch(API_URL, {
-                    method: "POST",
-                    body: new URLSearchParams({
-                        action: "password_reset_confirm",
-                        token,
-                        role,
-                        password: password.value
-                    })
-                });
-
-                const text = await res.text();
-                let data;
-                try { data = JSON.parse(text); } catch { data = { error: true, message: text }; }
-
-                if (data.error) {
-                    showBanner("error", data.error || data.message || "Reset failed.");
-                    btn.disabled = false;
-                    return;
-                }
-
-                showBanner("success", "Password reset successful. Redirecting…");
-                setTimeout(() => location.href = "login.html", 1200);
-            } catch (e) {
-                showBanner("error", "Network error. Please try again.");
-                btn.disabled = false;
-            }
+            show(ok, "Password updated successfully. Redirecting to login...");
+            setTimeout(() => location.href = "login.html", 900);
         });
-
-        if (resetForm) resetForm.addEventListener("submit", (e) => e.preventDefault());
     </script>
-
 </body>
 
 </html>
